load("//:BUILD.bzl",
     COPTS = "BASE_COPTS",
     "LIBLOG_CC_VERSION", "UTHASH_VERSION")

exports_files(["opam_switch_converter.c", "coswitch_cleaner.c"])

################################################################
####    libcoswitch - converts opam switch
## depends on dune_s7, libfindlib, config
################################################################
cc_library(
    name = "coswitch",
    srcs = [
        "opam_switch_converter.c",
        "//src/hdrs:opam_switch_converter.h",
        "coswitch_cleaner.c",
        "//src/hdrs:coswitch_cleaner.h",
        "//src:handlers_srcs",
        # "//src:coswitch_srcs",
    ] + select({
        "//bzl/host:linux": [
            "//src/linux:strlcat.c",
            "//src/linux:strlcpy.c",
            "//src/linux:strnstr.c"],
        "//conditions:default":   []
    }) + select({
        "//compilation_mode:dbg?": [
            "//src:debug_srcs",
            # "debug.c", "//src/hdrs:debug.h",
            # "debug_mibl.c", "//src/hdrs:debug_mibl.h",
            # "debug_s7.c", "//src/hdrs:debug_s7.h"
        ],
        "//conditions:default": []
    }),
    hdrs = [
        "//src/hdrs:libmibl.h",
        # "//src/hdrs:opam_switch_converter.h",
        # "//src/hdrs:coswitch_cleaner.h",
    ],
    deps = [
        "//src:config",
        "//src/dune",
        "//src/findlib",
        "//src/xdg",
        # "//src:mibl",
        "@libs7//src:s7",
        "//vendored/libinih:inih",
        "@liblog_cc//src:logc",
        "@uthash//src:uthash",
    ],
    copts = COPTS + [
        "-Isrc",
        "-I$(GENDIR)/src",
        "-Iexternal/mibl/src",
        "-I$(GENDIR)/external/mibl/src",

        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-I$(GENDIR)/src/dune",
        "-I$(GENDIR)/external/mibl/src/dune",

        "-I$(GENDIR)/src/findlib",
        "-I$(GENDIR)/external/mibl/src/findlib",

        "-Iexternal/libs7/src",
        # "-Iexternal/libinih",

        "-Ivendored/libinih",
        "-Iexternal/mibl/vendored/libinih",

        "-Iexternal/liblog_cc~{}/src".format(LIBLOG_CC_VERSION),

        "-Iexternal/uthash~{}/src".format(UTHASH_VERSION)
    ],
    local_defines = select({
        "//config/debug:debug?": ["DEVBUILD", "DEBUG-MIBL"],
        "//conditions:default":   []
    }) + select({
        "//config/debug:trace?": ["TRACING"],
        "//conditions:default":   []
    }),
    # ] + select({
    #     "//compilation_mode:dbg?": [":debug"],
    #     "//conditions:default": []
    # }),
    visibility = ["//visibility:public"]
)
